[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/scaffolder/addons/plugger/src/gui/framework_manifest_row.gd" type="Script" id=1]
[ext_resource path="res://addons/scaffolder/addons/plugger/src/gui/reset_button.tscn" type="PackedScene" id=2]

[node name="FrameworkManifestRow" type="PanelContainer"]
margin_right = 14.0
margin_bottom = 14.0
rect_clip_content = true
mouse_filter = 1
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 16.0
margin_bottom = 21.0
rect_clip_content = true
mouse_filter = 1
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 9.0
margin_bottom = 14.0
rect_clip_content = true
size_flags_horizontal = 3

[node name="OverrideIndicator" type="ColorRect" parent="MarginContainer/HBoxContainer"]
margin_bottom = 14.0
mouse_filter = 1
color = Color( 0, 0, 0, 0 )

[node name="Spacer" type="Control" parent="MarginContainer/HBoxContainer"]
margin_left = 4.0
margin_top = 7.0
margin_right = 4.0
margin_bottom = 7.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 8.0
margin_right = 9.0
margin_bottom = 14.0
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/HBoxContainer"]
margin_right = 1.0
margin_bottom = 14.0
rect_clip_content = true
mouse_filter = 1
size_flags_horizontal = 3
valign = 1
clip_text = true

[node name="ResetButton" parent="MarginContainer/HBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
visible = false
margin_left = 5.0
margin_right = 5.0
margin_bottom = 14.0

[connection signal="pressed" from="MarginContainer/HBoxContainer/HBoxContainer/ResetButton" to="." method="_on_reset_changes_pressed"]
